# extremum-seeking

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  build-docs.sh  build_docs.sh  mypy.ini  pyproject.toml  run_linters.sh  setup.cfg
docs/: api.rst  changelog.rst  conf.py  index.rst  quickstart.rst  usage.rst
docs/_theme/: layout.html
docs/examples/: coi_example.rst  index.rst  simple_example.rst
examples/: coi_example.py  simple_example.py
src/cernml/extremum_seeking/: __init__.py
tests/: test_extremum_seeker.py
