[metadata]
name = cernml-extremum-seeking
url = https://gitlab.cern.ch/be-op-ml-optimization/extremum-seeking
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Scheinker's extremum seeking algorithm as an optimizer
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    numpy >= 1.0
zip_safe = True

[options.package_data]
cernml.extremum_seeking = py.typed

[options.extras_require]
test =
    pytest
